--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <section id="projects">
         <div class="flex-row">
           <h2 class="section-title primary-border">
-            projects
+            Projects
           </h2>
         </div>
   
