added crunch time

--- a/index.html
+++ b/index.html
@@ -77,18 +77,19 @@
         <div class="trainers">
           <article class="trainer" id="first-box">
 
-            <a href="https://martaniz.github.io/urba22/"><img src="assets/css/images/web-3706551_1920.jpg" alt="" ></a>
+            <a href="https://crunchteam04.github.io/Crunch-Time/"><img src="assets/css/images/web-3706551_1920.jpg" alt="" ></a>
 
      
 
             <div class="trainer-bio">
-              <h3 class="trainer-name">HTML CSS Git </h3>
-              <h4 class="trainer-role">Code Refactor</h4>
+              <h3 class="trainer-name">Crunch Time  </h3>
+              <h4 class="trainer-role">Group Project </h4>
               <p>
-                Click the image above to view my work in github. 
+                Click the image above to view Crunch Time. 
               <p>
               <p> 
-                In this existing code I had applied accessibility standarts so that the site is optimized for serche engings. 
+                Description:
+Crunch Time is an exercise app for people with little time. The user inputs how much time they have and the app provides them an exercise to do while displaying motivational quotes. The app then records your time, exercises and name and records in a history setting.
               </p>
                
             </div>
